completed basic functionality of volume bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
 
     <!--Volume Groups-->
     <string name="media">Media</string>
+    <string name="alarm">Alarm</string>
+    <string name="Ringer">Ringer</string>
 
 </resources>
